--- a/蘵感ZanGan上傳/cart.html
+++ b/蘵感ZanGan上傳/cart.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>購物車</title>
     <link rel="stylesheet" href="style.css">
-    
-    
+
+
 </head>
 
 <body>
@@ -150,12 +150,31 @@
                         </div>
                     </div>
                 </div>
-                <!-- 送出 -->
-                <button>
-                    <a href="#">
-                        <h3>送出</h3>
-                    </a>
-                </button>
+                <!-- 購物車總計 -->
+                <div class="total">
+                    <hr>
+                    <h2>購物車總計</h2>
+                    <div class="box2 box9">
+                        <div>
+                            <h4>NT$</h4>
+                            <h1>8000</h1>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <!-- 送出預約訂單 -->
+                <div class="sent">
+                    <button>
+                        <a href="#">
+                            <h3>送出預約訂單</h3>
+                        </a>
+                    </button>
+                </div>
+                <!-- 上一個步驟 -->
+                <div class="more">
+                    <h3>Prev Step</h3>
+                    <img src="img/news/left arrow.svg" alt="">
+                </div>
             </div>
         </div>
     </main>
@@ -228,11 +247,11 @@
             </ul>
         </div>
     </div>
-<!-- jQuery Core 3.7.0原始碼,一定要放在最上面,先被執行 -->
-<script src="https://code.jquery.com/jquery-3.7.0.min.js"
-integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-<!-- 自訂的js,一定要放在最下面,最後被執行 -->
-<script src="script.js"></script>
+    <!-- jQuery Core 3.7.0原始碼,一定要放在最上面,先被執行 -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <!-- 自訂的js,一定要放在最下面,最後被執行 -->
+    <script src="script.js"></script>
 </body>
 
 </html>
