--- a/蘵感ZanGan上傳/cart.html
+++ b/蘵感ZanGan上傳/cart.html
@@ -65,6 +65,7 @@
             <h3>ENROLL IN</h3>
             <h1>購物車</h1>
         </div>
+        <!-- 資料核對區  -->
         <nav class="box3">
             <h2><span class="check"> 資料核對</span></h2>
             <h4>
@@ -138,9 +139,9 @@
                     </span>
                     <!-- 數量增減 -->
                     <div class="box box8">
-                        <div class="minus">-</div>
-                        <div class="num">1</div>
-                        <div class="add">+</div>
+                        <div class="minus1">-</div>
+                        <div class="num1">1</div>
+                        <div class="add1">+</div>
                     </div>
                     <!-- subtotal -->
                     <div class="box2 box9">
@@ -150,6 +151,7 @@
                         </div>
                     </div>
                 </div>
+                <hr class="hrb">
                 <!-- 購物車總計 -->
                 <div class="total">
                     <hr>
