--- a/backup/tcart.html
+++ b/backup/tcart.html
@@ -66,16 +66,17 @@
             <h1>購物車</h1>
         </div>
         <!-- 資料核對區  -->
-        <nav class="box11">
-            <h2><span class="check"> 資料核對</span></h2>
-            <h4>
-                <span class="bold">您好，林洛洛！ </span> <br>
-                請確認以下預約的課程是否正確，謝謝配合。<br>
+        <nav >
+            <div class="deta">
+                <h2><span class="check"> 資料核對</span></h2>
+                <p><span class="bold">您好，林洛洛！</span> <br>
+               請確認以下預約的課程是否正確，謝謝配合。</p>
                 <div class="email">
-                    我們將寄簡章到您的信箱：
-                    <span class="eng">lolitama@gmail.com</span>
+                    <h3>我們將寄簡章到您的信箱：
+                        <span class="eng">lolitama@gmail.com</span>
+                    </h3>
                 </div>
-            </h4>
+            </div>
         </nav>
         <!-- 整個區塊 -->
         <div class="block1">
