--- a/backup/tcart.html
+++ b/backup/tcart.html
@@ -77,7 +77,7 @@
             </div>
         </nav>
         <!-- 整個區塊 -->
-        <div class="block1">
+        <span class="area">
             <div class="bar">
                 <div>
                     <h3>Course</h3>
@@ -110,37 +110,64 @@
                     <h1>8000</h1>
                 </div>
             </div>
-            <!-- 分隔線 -->
-            <hr class="hrb">
-            <!-- 活動:金工山林遊: 悠悠 -->
-            <div class="block2 list5 block3">
-                <span class="act">
-                    <h3>活動</h3>
-                    <h1>4/13</h1>
-                    <h2>金工山林遊: 悠悠</h2>
-                </span>
-                <h3>下午14:00-16:00，共1堂</h3>
-                <!-- 已添加課程內容區塊  -->
-                <span class="box2 box7">
-                    <div>
-                        <h4>$</h4>
-                        <h1>8000</h1>
-                    </div>
-                </span>
-                <!-- 數量增減 -->
-                <div class="box box8">
-                    <div class="minus1">-</div>
-                    <div class="num1">1</div>
-                    <div class="add1">+</div>
+        </span>
+        <!-- 分隔線 -->
+        <hr class="hrb">
+        <!-- 活動:金工山林遊: 悠悠 -->
+        <div class="tea">
+            <span class="act">
+                <h3>活動</h3>
+                <h1>4/13</h1>
+                <h2>金工山林遊: 悠悠</h2>
+            </span>
+            <h3><span class="noon"> 下午14:00-16:00，共1堂</span></h3>
+            <!-- 已添加課程內容區塊  -->
+            <div class="money">
+                <h4>$</h4>
+                <h1>8000</h1>
+            </div>
+            <!-- 數量增減 -->
+            <div class="box">
+                <div class="minus">-</div>
+                <div class="num">1</div>
+                <div class="add">+</div>
+            </div>
+            <!-- subtotal -->
+            <div class="subtotal">
+                <h4>$</h4>
+                <h1>8000</h1>
+            </div>
+        </div>
+        
+        <!-- xxx 活動:金工山林遊: 悠悠 -->
+        <span class="area">
+            <span class="act">
+                <h3>活動</h3>
+                <h1>4/13</h1>
+                <h2>金工山林遊: 悠悠</h2>
+            </span>
+            <h3>下午14:00-16:00，共1堂</h3>
+            <!-- 已添加課程內容區塊  -->
+            <span class="money">
+                <div>
+                    <h4>$</h4>
+                    <h1>8000</h1>
                 </div>
-                <!-- subtotal -->
-                <div class="box2 box9">
-                    <div>
-                        <h4>$</h4>
-                        <h1>8000</h1>
-                    </div>
+            </span>
+            <!-- 數量增減 -->
+            <div class="box">
+                <div class="minus1">-</div>
+                <div class="num1">1</div>
+                <div class="add1">+</div>
+            </div>
+            <!-- subtotal -->
+            <div class="subtotal">
+                <div>
+                    <h4>$</h4>
+                    <h1>8000</h1>
                 </div>
             </div>
+
             <hr class="hrb">
             <!-- 購物車總計 -->
             <div class="total">
@@ -167,7 +194,7 @@
                 <h3>Prev Step</h3>
                 <img src="img/news/left arrow.svg" alt="">
             </div>
-        </div>
+        </span>
         </div>
     </main>
 
