--- a/backup/tcart.html
+++ b/backup/tcart.html
@@ -77,40 +77,40 @@
             </div>
         </nav>
         <!-- 整個區塊 -->
-        <span class="area">
-            <div class="bar">
-                <div>
-                    <h3>Course</h3>
-                    <h3 class="price">Price</h3>
-                    <h3>Quantity</h3>
-                    <h3>Subtotal</h3>
-                </div>
-                <hr class="hrb">
+        <!-- <span class="area"> -->
+        <div class="bar">
+            <div>
+                <h3>Course</h3>
+                <h3 class="price">Price</h3>
+                <h3>Quantity</h3>
+                <h3>Subtotal</h3>
             </div>
-            <!-- 右邊小區塊  -->
-            <!-- 茶藝興趣A班 -->
-            <div class="tea">
-                <h2>茶藝興趣A班</h2>
-                <h3>週五下午14:00-16:00，共6堂 <br>
-                    3/3、3/10、3/17、3/24、3/31、4/7</h3>
-                <!-- 已添加課程內容區塊  -->
-                <div class="money">
-                    <h4>$</h4>
-                    <h1>8000</h1>
-                </div>
-                <!-- 數量增減 -->
-                <div class="box">
-                    <div class="minus">-</div>
-                    <div class="num">1</div>
-                    <div class="add">+</div>
-                </div>
-                <!-- subtotal -->
-                <div class="subtotal">
-                    <h4>$</h4>
-                    <h1>8000</h1>
-                </div>
+            <hr class="hrb">
+        </div>
+        <!-- 右邊小區塊  -->
+        <!-- 茶藝興趣A班 -->
+        <div class="tea">
+            <h2>茶藝興趣A班</h2>
+            <h3>週五下午14:00-16:00，共6堂 <br>
+                3/3、3/10、3/17、3/24、3/31、4/7</h3>
+            <!-- 已添加課程內容區塊  -->
+            <div class="money">
+                <h4>$</h4>
+                <h1>8000</h1>
             </div>
-        </span>
+            <!-- 數量增減 -->
+            <div class="box">
+                <div class="minus">-</div>
+                <div class="num">1</div>
+                <div class="add">+</div>
+            </div>
+            <!-- subtotal -->
+            <div class="subtotal">
+                <h4>$</h4>
+                <h1>8000</h1>
+            </div>
+        </div>
+        <!-- </span> -->
         <!-- 分隔線 -->
         <hr class="hrb">
         <!-- 活動:金工山林遊: 悠悠 -->
@@ -138,62 +138,32 @@
                 <h1>8000</h1>
             </div>
         </div>
-        
-        <!-- xxx 活動:金工山林遊: 悠悠 -->
-        <span class="area">
-            <span class="act">
-                <h3>活動</h3>
-                <h1>4/13</h1>
-                <h2>金工山林遊: 悠悠</h2>
-            </span>
-            <h3>下午14:00-16:00，共1堂</h3>
-            <!-- 已添加課程內容區塊  -->
-            <span class="money">
-                <div>
-                    <h4>$</h4>
-                    <h1>8000</h1>
-                </div>
-            </span>
-            <!-- 數量增減 -->
-            <div class="box">
-                <div class="minus1">-</div>
-                <div class="num1">1</div>
-                <div class="add1">+</div>
-            </div>
-            <!-- subtotal -->
-            <div class="subtotal">
-                <div>
-                    <h4>$</h4>
-                    <h1>8000</h1>
-                </div>
-            </div>
-
-            <hr class="hrb">
-            <!-- 購物車總計 -->
-            <div class="total">
-                <hr>
+        <hr class="hrb">
+        <!-- 購物車總計 -->
+        <div class="total">
+            <hr>
+            <div class="total_money">
                 <h2>購物車總計</h2>
-                <div class="box2 box9">
-                    <div>
-                        <h4>NT$</h4>
-                        <h1>8000</h1>
-                    </div>
+                <div class="nt">
+                    <h4>NT$</h4>
+                    <h1>8000</h1>
                 </div>
-                <hr>
             </div>
-            <!-- 送出預約訂單 -->
-            <div class="sent">
-                <button>
-                    <a href="#">
-                        <h3>送出預約訂單</h3>
-                    </a>
-                </button>
-            </div>
-            <!-- 上一個步驟 -->
-            <div class="more">
-                <h3>Prev Step</h3>
-                <img src="img/news/left arrow.svg" alt="">
-            </div>
+            <hr>
+        </div>
+        <!-- 送出預約訂單 -->
+        <div class="sent">
+            <button>
+                <a href="#">
+                    <h3>送出預約訂單</h3>
+                </a>
+            </button>
+        </div>
+        <!-- 上一個步驟 -->
+        <div class="more">
+            <h3>Prev Step</h3>
+            <img src="img/news/left arrow.svg" alt="">
+        </div>
         </span>
         </div>
     </main>
