--- a/蘵感ZanGan上傳/signup suc.html
+++ b/蘵感ZanGan上傳/signup suc.html
@@ -57,7 +57,7 @@
     </div>
 
     <!-- signup -->
-    <main id="signup">
+    <main id="signup0">
         <!-- 上面導覽列 -->
         <nav>
             <h3>ENROLL IN</h3>
@@ -103,7 +103,7 @@
                 <!-- 加入預約清單 -->
                 <div class="list">
                     <h4>加入預約清單</h4>
-                    <img src="img/index/index-news/arrow(白).svg" alt="">
+                    <a href="signup suc.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                 </div>
             </div>
             <!-- 垂直線 -->
