--- a/蘵感ZanGan上傳/signup.html
+++ b/蘵感ZanGan上傳/signup.html
@@ -59,7 +59,7 @@
     </div>
 
     <!-- signup -->
-    <main id="signup">
+    <main id="signup0">
         <!-- 上面導覽列 -->
         <nav>
             <h3>ENROLL IN</h3>
