--- a/蘵感ZanGan上傳/cart.html
+++ b/蘵感ZanGan上傳/cart.html
@@ -58,126 +58,113 @@
         </nav>
     </div>
 
-    <!-- signup -->
-    <main id="signup">
+    <!-- cart購物車區 -->
+    <main id="cart">
         <!-- 上面導覽列 -->
         <div class="nav">
             <h3>ENROLL IN</h3>
             <h1>購物車</h1>
         </div>
         <!-- 資料核對區  -->
-        <nav class="box3">
-            <h2><span class="check"> 資料核對</span></h2>
-            <h4>
-                <span class="bold">您好，林洛洛！ </span> <br>
-                請確認以下預約的課程是否正確，謝謝配合。<br>
-                <div class="email">
-                    我們將寄簡章到您的信箱：
+        <nav>
+            <div class="deta">
+                <h2>資料核對</h2>
+                <p><span class="bold">您好，林洛洛！</span> <br>
+                    請確認以下預約的課程是否正確，謝謝配合。</p>
+                <h3>我們將寄簡章到您的信箱：
                     <span class="eng">lolitama@gmail.com</span>
-                </div>
-            </h4>
+                </h3>
+            </div>
         </nav>
         <!-- 整個區塊 -->
-        <div class="block1">
-            <!-- 右邊顯示選取課程或活動 -->
-            <div class="nav2">
-                <!-- 小標題區 -->
-                <div class="item">
-                    <div class="box4">
-                        <div>
-                            <h3>Course</h3>
-                            <h3 class="price">Price</h3>
-                            <h3>Quantity</h3>
-                            <h3>Subtotal</h3>
-                        </div>
-                        <hr>
-                    </div>
-                </div>
-                <!-- 右邊小區塊  -->
-                <!-- 茶藝興趣A班 -->
-                <div class="list4">
-                    <h2>茶藝興趣A班</h2>
-                    <h3>週五下午14:00-16:00，共6堂 <br>
-                        3/3、3/10、3/17、3/24、3/31、4/7</h3>
-                    <!-- 已添加課程內容區塊  -->
-                    <span class="box2 box5">
-                        <div>
-                            <h4>$</h4>
-                            <h1>8000</h1>
-                        </div>
-                    </span>
-                    <!-- 數量增減 -->
-                    <div class="box">
-                        <div class="minus">-</div>
-                        <div class="num">1</div>
-                        <div class="add">+</div>
-                    </div>
-                    <!-- subtotal -->
-                    <div class="box2 box5 box6">
-                        <div>
-                            <h4>$</h4>
-                            <h1>8000</h1>
-                        </div>
-                    </div>
-                </div>
-                <!-- 分隔線 -->
-                <hr class="hrb">
-                <!-- 活動:金工山林遊: 悠悠 -->
-                <div class="block2 list5 block3">
-                    <span class="act">
-                        <h3>活動</h3>
-                        <h1>4/13</h1>
-                        <h2>金工山林遊: 悠悠</h2>
-                    </span>
-                    <h3>下午14:00-16:00，共1堂</h3>
-                    <!-- 已添加課程內容區塊  -->
-                    <span class="box2 box7">
-                        <div>
-                            <h4>$</h4>
-                            <h1>8000</h1>
-                        </div>
-                    </span>
-                    <!-- 數量增減 -->
-                    <div class="box box8">
-                        <div class="minus1">-</div>
-                        <div class="num1">1</div>
-                        <div class="add1">+</div>
-                    </div>
-                    <!-- subtotal -->
-                    <div class="box2 box9">
-                        <div>
-                            <h4>$</h4>
-                            <h1>8000</h1>
-                        </div>
-                    </div>
-                </div>
-                <hr class="hrb">
-                <!-- 購物車總計 -->
-                <div class="total">
-                    <hr>
-                    <h2>購物車總計</h2>
-                    <div class="box2 box9">
-                        <div>
-                            <h4>NT$</h4>
-                            <h1>8000</h1>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <!-- 送出預約訂單 -->
-                <div class="sent">
-                    <button>
-                        <a href="#">
-                            <h3>送出預約訂單</h3>
-                        </a>
-                    </button>
-                </div>
-                <!-- 上一個步驟 -->
-                <div class="more">
-                    <h3>Prev Step</h3>
-                    <img src="img/news/left arrow.svg" alt="">
+        <!-- <span class="area"> -->
+        <div class="bar">
+            <div>
+                <h3>Course</h3>
+                <h3 class="price">Price</h3>
+                <h3>Quantity</h3>
+                <h3>Subtotal</h3>
+            </div>
+            <hr class="hrb">
+        </div>
+        <!-- 右邊小區塊  -->
+        <!-- 茶藝興趣A班 -->
+        <div class="tea">
+            <h2>茶藝興趣A班</h2>
+            <h3>週五下午14:00-16:00，共6堂 <br>
+                3/3、3/10、3/17、3/24、3/31、4/7</h3>
+            <!-- 已添加課程內容區塊  -->
+            <div class="money">
+                <h4>$</h4>
+                <h1>8000</h1>
+            </div>
+            <!-- 數量增減 -->
+            <div class="box">
+                <div class="minus">-</div>
+                <div class="num">1</div>
+                <div class="add">+</div>
+            </div>
+            <!-- subtotal -->
+            <div class="subtotal">
+                <h4>$</h4>
+                <h1>8000</h1>
+            </div>
+        </div>
+        <!-- </span> -->
+        <!-- 分隔線 -->
+        <hr class="hrb">
+        <!-- 活動:金工山林遊: 悠悠 -->
+        <div class="tea">
+            <span class="act">
+                <h3>活動</h3>
+                <h1>4/13</h1>
+                <h2>金工山林遊: 悠悠</h2>
+            </span>
+            <h3><span class="noon"> 下午14:00-16:00，共1堂</span></h3>
+            <!-- 已添加課程內容區塊  -->
+            <div class="money">
+                <h4>$</h4>
+                <h1>8000</h1>
+            </div>
+            <!-- 數量增減 -->
+            <div class="box">
+                <div class="minus1">-</div>
+                <div class="num1">1</div>
+                <div class="add1">+</div>
+            </div>
+            <!-- subtotal -->
+            <div class="subtotal">
+                <h4>$</h4>
+                <h1>8000</h1>
+            </div>
+        </div>
+        <hr class="hrb">
+        <!-- 購物車總計 -->
+        <div class="total">
+            <hr>
+            <div class="total_money">
+                <h2>購物車總計</h2>
+                <div class="nt">
+                    <h4>NT$</h4>
+                    <h1>8000</h1>
                 </div>
             </div>
+            <hr>
+        </div>
+        <!-- 送出預約訂單 -->
+        <div class="sent">
+            <button>
+                <a href="#">
+                    <h3>送出預約訂單</h3>
+                </a>
+            </button>
+        </div>
+        <!-- 上一個步驟 -->
+        <div class="more">
+            <h3>Prev Step</h3>
+            <img src="img/news/left arrow.svg" alt="">
+        </div>
+        </span>
         </div>
     </main>
 
