--- a/蘵感ZanGan上傳/cart.html
+++ b/蘵感ZanGan上傳/cart.html
@@ -155,7 +155,7 @@
         <div class="sent">
             <button>
                 <a href="#">
-                    <h3>送出預約訂單</h3>
+                    <a href="reserve.html"><h3>送出預約訂單</h3></a>
                 </a>
             </button>
         </div>
