--- a/aaa.html
+++ b/aaa.html
@@ -312,25 +312,22 @@
 
     <!-- 5.teachers -->
     <div id="teachers">
-        <div class="a">
             <div class="nav">
                 <h3>TEACHERS</h3>
                 <h1>蘵感 <pr>專業師資 </h1>
                 <div class="hr"></div>
             </div>
-            <!-- <div class="b">
-                <img src="img/index/index-teachers/logo(棕色).svg" alt="">
-            </div> -->
             <ul>
                 <!--師資Jaclyn Wu  -->
                 <li>
                     <div class="teachers_box">
                         <div class="teachers_name">
                             <h2>Jaclyn Wu</h2>
-                        </div>
-                        <div class="people">
+                            <div class="people pos">
                             <img src="img/index/index-teachers/師資Wu.png" alt="">
                         </div>
+                        </div>
+                        
                         <div class="teachers_good">
                             <h4 class="teachers_college">英國普頓大學花藝系所碩士 </h4>
                             <h4 class="teachers_best">擅長法式層次、自然風格盆花</h4>
@@ -343,12 +340,12 @@
                         <div class="teachers_name">
                             <h2>Tomoko Liu</h2>
                         </div>
-                        <div>
+                        <div class="people">
                             <img src="img/index/index-teachers/師資Liu.png" alt="">
                         </div>
                         <div class="teachers_good">
                             <h4 class="teachers_college">德國包浩斯材質創新學士 </h4>
-                            <h4 class="teachers_best">異材質飾品品創作專業</h4>
+                            <h4 class="teachers_best another">異材質飾品品創作專業</h4>
                         </div>
                     </div>
                 </li>
@@ -358,12 +355,12 @@
                         <div class="teachers_name">
                             <h2>Peter Chen</h2>
                         </div>
-                        <div>
+                        <div class="people">
                             <img src="img/index/index-teachers/師資Chen.png" alt="">
                         </div>
                         <div class="teachers_good">
                             <h4 class="teachers_college">加拿大多倫多大學設計學士 </h4>
-                            <h4 class="teachers_best">現代風格，擅長融合材料和色彩</h4>
+                            <h4 class="teachers_best another_chen">現代風格，擅長融合材料和色彩</h4>
                         </div>
                     </div>
                 </li>
@@ -373,12 +370,12 @@
                         <div class="teachers_name">
                             <h2>Ablega Hang</h2>
                         </div>
-                        <div>
+                        <div class="people">
                             <img src="img/index/index-teachers/師資Hang.png" alt="">
                         </div>
                         <div class="teachers_good">
                             <h4 class="teachers_college">日本新宿調理師專門學校 </h4>
-                            <h4 class="teachers_best">擅長日是糕點和菓子專業</h4>
+                            <h4 class="teachers_best another_hang">擅長日是糕點和菓子專業</h4>
                         </div>
                     </div>
                 </li>
@@ -388,7 +385,7 @@
                         <div class="teachers_name">
                             <h2>Ruta Rio</h2>
                         </div>
-                        <div>
+                        <div class="people">
                             <img src="img/index/index-teachers/師資Rio.png" alt="">
                         </div>
                         <div class="teachers_good">
@@ -398,7 +395,6 @@
                     </div>
                 </li>
             </ul>
-        </div>
     </div>
 
     <!-- 6.news  -->
