--- a/aaa.html
+++ b/aaa.html
@@ -305,7 +305,7 @@
                 </div>
             </li>
         </ul>
-        <div class="b">
+        <div class="bglogo">
             <img src="img/index/index-teachers/logo(棕色).svg" alt="">
         </div>
     </div>
@@ -315,13 +315,13 @@
         <div class="nav">
             <h3>TEACHERS</h3>
             <h1>蘵感 <pr>專業師資 </h1>
-            <div class="hr"></div>
+            <hr>
         </div>
         <ul>
             <!--師資Jaclyn Wu  -->
             <li>
                 <div class="teachers_box">
-                    <div class="teachers_name">
+                    <div>
                         <h2>Jaclyn Wu</h2>
                         <div class="people pos">
                             <img src="img/index/index-teachers/師資Wu.png" alt="">
@@ -336,7 +336,7 @@
             <!--師資Tomoko Liu  -->
             <li>
                 <div class="teachers_box">
-                    <div class="teachers_name">
+                    <div>
                         <h2>Tomoko Liu</h2>
                         <div class="people pos ">
                             <img src="img/index/index-teachers/師資Liu.png" alt="">
@@ -351,7 +351,7 @@
             <!--師資Peter  Chen  -->
             <li>
                 <div class="teachers_box">
-                    <div class="teachers_name">
+                    <div>
                         <h2>Peter Chen</h2>
                         <div class="people pos">
                             <img src="img/index/index-teachers/師資Chen.png" alt="">
@@ -366,7 +366,7 @@
             <!--師資Ablega Hang  -->
             <li>
                 <div class="teachers_box">
-                    <div class="teachers_name">
+                    <div>
                         <h2>Ablega Hang</h2>
                         <div class="people pos">
                             <img src="img/index/index-teachers/師資Hang.png" alt="">
@@ -381,7 +381,7 @@
             <!--師資Ruta Rio  -->
             <li>
                 <div class="teachers_box">
-                    <div class="teachers_name">
+                    <div>
                         <h2>Ruta Rio</h2>
                         <div class="people pos">
                             <img src="img/index/index-teachers/師資Rio.png" alt="">
@@ -403,18 +403,23 @@
         </div>
         <nav class="uu">
             <div class="nav">
-                <div>
-                    <h3>NEWS</h3>
-                    <h1>最新消息</h1>
-                    <hr>
-                </div>
-                <div class="more">
-                    <a href="news.html">查看更多</a>
-                    <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
-                </div>
+                <!-- <div class="navbar"> -->
+                    <span>
+                        <h3>NEWS</h3>
+                        <h1>最新消息</h1>
+                        
+                    </span>
+                    <div class="more">
+                        <a href="news.html">查看更多</a>
+                        <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
+                    </div>
+                    
+                <!-- </div> -->
+
             </div>
             <td>
                 <!-- 11月美學... -->
+                <hr>
                 <div class="box1">
                     <div class="pp">
                         <h3>2023.1.16</h3>
